Legger til feature-toggle for mottak av X008
Co-authored-by: LarsLoeken <Lars.Loken.Bjornskau@nav.no>